--- a/cuda/cudarap/CMakeLists.txt
+++ b/cuda/cudarap/CMakeLists.txt
@@ -5,54 +5,71 @@ project(${name})
 include(EnvBuildOptions)
 include(EnvCompilationFlags)
 
+find_package(PLog REQUIRED)
 find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
 
-include_directories(
+find_package(SysRap REQUIRED)
+
+set(INCLUDE_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${PLog_INCLUDE_DIRS}
     ${CUDA_INCLUDE_DIRS}
+    ${SysRap_INCLUDE_DIRS}
+)
+set(DEFINITIONS
+   ${PLog_DEFINITIONS}
+   ${SysRap_DEFINITIONS}
+)
+include_directories(${INCLUDE_DIRS})
+add_definitions(${DEFINITIONS})
+
+set(LIBRARIES
+   ${PLog_LIBRARIES}
+   ${SysRap_LIBRARIES}
+)
+message("${name}.SysRap_LIBRARIES : ${SysRap_LIBRARIES} ")
+
+if(UNIX)
+  set(LIBRARIES ${LIBRARIES} ssl )  
+endif(UNIX)
+
+set(SOURCES
+    CUDARAP_LOG.cc
+
+    md5digest.cc
+    cuRANDWrapper.cc
+    cuRANDWrapper_kernel.cu
+    LaunchSequence.cc
+    LaunchCommon.cc
+    CResource.cc
+    CResource_.cu
 )
 
-CUDA_ADD_LIBRARY( ${name} 
-                  md5digest.cc
-                  cuRANDWrapper.cc
-                  cuRANDWrapper_kernel.cu
-                  LaunchSequence.cc
-                  LaunchCommon.cc
-                  CResource.cc
-                  CResource_.cu
-                 OPTIONS
-                     -gencode=arch=compute_30,code=sm_30                  
+SET(HEADERS
+
+    CUDARAP_LOG.hh
+    CUDARAP_API_EXPORT.hh
+    CUDARAP_HEAD.hh
+    CUDARAP_TAIL.hh
+
+    LaunchCommon.hh
+    LaunchSequence.hh
+    cuRANDWrapper.hh
+    cuRANDWrapper_kernel.hh
+    CResource.hh
+    CBufSpec.hh
+    CBufSlice.hh
 )
 
-set (LIBRARIES
-    ${name}
-    ssl
- #   crypt
-)
+CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS -gencode=arch=compute_30,code=sm_30 )
+target_link_libraries(${name} ${LIBRARIES} )
 
-
-# TODO: adopt standard tests approach 
-add_executable( LaunchSequenceTest LaunchSequenceTest.cc )
-target_link_libraries( LaunchSequenceTest ${LIBRARIES} )
-
-add_executable( cuRANDWrapperTest cuRANDWrapperTest.cc )
-target_link_libraries( cuRANDWrapperTest ${LIBRARIES})
-
+set(LIBRARIES ${LIBRARIES} ${name} )  
 
 install(TARGETS ${name} LIBRARY DESTINATION lib)
-install(TARGETS LaunchSequenceTest DESTINATION bin)
-install(TARGETS cuRANDWrapperTest  DESTINATION bin)
+install(FILES ${HEADERS} DESTINATION include/${name})
 
-SET(hdrs 
-LaunchCommon.hh
-LaunchSequence.hh
-cuRANDWrapper.hh
-cuRANDWrapper_kernel.hh
-CResource.hh
-CBufSpec.hh
-CBufSlice.hh
-)
-
-install(FILES ${hdrs} DESTINATION include/${name})
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
 
 
