--- a/graphics/openmeshrap/CMakeLists.txt
+++ b/graphics/openmeshrap/CMakeLists.txt
@@ -7,6 +7,8 @@ include(EnvCompilationFlags)
 
 find_package(PLog REQUIRED)
 find_package(OpticksBoost REQUIRED)
+
+find_package(SysRap REQUIRED)
 find_package(BoostRap REQUIRED)
 find_package(GLM    REQUIRED)
 find_package(NPY REQUIRED)
@@ -19,6 +21,7 @@ include_directories(
 
    ${PLog_INCLUDE_DIRS} 
    ${OpticksBoost_INCLUDE_DIRS} 
+   ${SysRap_INCLUDE_DIRS} 
    ${BoostRap_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS} 
@@ -30,6 +33,7 @@ include_directories(
 add_definitions(
    ${PLog_DEFINITIONS}
    ${OpticksBoost_DEFINITIONS}
+   ${SysRap_DEFINITIONS} 
    ${BoostRap_DEFINITIONS} 
    ${GLM_DEFINITIONS}
    ${NPY_DEFINITIONS}
@@ -41,6 +45,7 @@ add_definitions(
 set(LIBRARIES
    ${PLog_LIBRARIES}
    ${OpticksBoost_LIBRARIES}
+   ${SysRap_LIBRARIES}
    ${BoostRap_LIBRARIES}
    ${GLM_LIBRARIES}
    ${NPY_LIBRARIES}
