--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -8,6 +8,7 @@ include(EnvCompilationFlags)
 find_package(PLog REQUIRED)
 find_package(OpticksBoost REQUIRED)
 find_package(GLM REQUIRED)
+find_package(SysRap REQUIRED)
 find_package(BoostRap REQUIRED)
 find_package(NPY REQUIRED)
 find_package(OpticksCore REQUIRED)
@@ -19,6 +20,7 @@ set(INCLUDE_DIRS
    ${OpticksBoost_INCLUDE_DIRS}
    ${GLM_INCLUDE_DIRS} 
 
+   ${SysRap_INCLUDE_DIRS} 
    ${BoostRap_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
    ${OpticksCore_INCLUDE_DIRS}
@@ -27,6 +29,7 @@ set(INCLUDE_DIRS
 set(LIBRARIES
    ${PLog_LIBRARIES}
    ${OpticksBoost_LIBRARIES}
+   ${SysRap_LIBRARIES}
    ${BoostRap_LIBRARIES}
    ${NPY_LIBRARIES}
    ${OpticksCore_LIBRARIES}
@@ -35,6 +38,7 @@ set(LIBRARIES
 set(DEFINITIONS
    ${PLog_DEFINITIONS}
    ${OpticksBoost_DEFINITIONS} 
+   ${SysRap_DEFINITIONS} 
    ${BoostRap_DEFINITIONS} 
    ${OpticksCore_DEFINITIONS} 
 )
@@ -42,15 +46,9 @@ set(DEFINITIONS
 include_directories(${INCLUDE_DIRS})   
 add_definitions(${DEFINITIONS})
 
-
-set(NEXT_SOURCES
-
-)
-
 set(SOURCES
 
     GGEO_LOG.cc
-
 
     GColorMap.cc
     GTransforms.cc
@@ -101,9 +99,6 @@ set(SOURCES
     GTreePresent.cc
 
     GSolid.cc
-
-
-
     GGeoLib.cc
     GGeoCfg.cc
     GGeoTest.cc
@@ -125,9 +120,6 @@ set(HEADERS
 
     GConstant.hh
 )
-
-
-
 
 SET(ALL_HEADERS
     GConstant.hh
@@ -176,9 +168,7 @@ SET(ALL_HEADERS
     GCIE.hh
     GGeoTest.hh
     GGeoTestConfig.hh
-
 )
-
 
 add_library(${name} SHARED ${SOURCES})
 target_link_libraries(${name} ${LIBRARIES})
