--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -7,7 +7,10 @@ include(EnvCompilationFlags)
 
 # see cuda-/FindCuda.cmake
 find_package(CUDA ${OPTICKS_CUDA_VERSION} REQUIRED QUIET)
+find_package(PLog REQUIRED)
 find_package(OpticksBoost REQUIRED)
+
+find_package(SysRap REQUIRED)
 find_package(BoostRap REQUIRED)
 find_package(GLM  REQUIRED)
 find_package(NPY  REQUIRED)
@@ -15,7 +18,9 @@ find_package(CUDARap  REQUIRED)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${PLog_INCLUDE_DIRS} 
     ${OpticksBoost_INCLUDE_DIRS} 
+    ${SysRap_INCLUDE_DIRS} 
     ${BoostRap_INCLUDE_DIRS} 
     ${GLM_INCLUDE_DIRS} 
     ${NPY_INCLUDE_DIRS} 
@@ -24,38 +29,55 @@ include_directories(
 )
 
 add_definitions(
+    ${PLog_DEFINITIONS}
     ${OpticksBoost_DEFINITIONS}
+    ${SysRap_DEFINITIONS}
     ${BoostRap_DEFINITIONS}
     ${CUDARap_DEFINITIONS}
 )
 
 set(LIBRARIES
-      ${OpticksBoost_LIBRARIES}
-      ${BoostRap_LIBRARIES}
-      ${NPY_LIBRARIES}
-      ${CUDARap_LIBRARIES}
+    ${PLog_LIBRARIES}
+    ${OpticksBoost_LIBRARIES}
+    ${SysRap_LIBRARIES}
+    ${BoostRap_LIBRARIES}
+    ${NPY_LIBRARIES}
+    ${CUDARap_LIBRARIES}
 )
 
-CUDA_ADD_LIBRARY( ${name}  
-       TBuf_.cu
-       TBufPair_.cu
-       TSparse_.cu
-       TUtil_.cu
-       OPTIONS -gencode=arch=compute_30,code=sm_30
+set(SOURCES
+
+    THRAP_LOG.cc
+
+    TBuf_.cu
+    TBufPair_.cu
+    TSparse_.cu
+    TUtil_.cu
 )
- 
-target_link_libraries( ${name} ${LIBRARIES})
 
 SET(HEADERS
-  TBuf.hh
-  TBufPair.hh
-  TSparse.hh
-  TUtil.hh
-  strided_range.h 
-  iexpand.h 
+
+    THRAP_LOG.hh
+    THRAP_API_EXPORT.hh
+    THRAP_HEAD.hh
+    THRAP_TAIL.hh
+
+    TBuf.hh
+    TBufPair.hh
+    TSparse.hh
+    TUtil.hh
+
+    strided_range.h 
+    iexpand.h 
 )
+
+CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS -gencode=arch=compute_30,code=sm_30)
+target_link_libraries( ${name} ${LIBRARIES})
+
 install(TARGETS ${name} DESTINATION lib)
 install(FILES ${HEADERS} DESTINATION include/${name})
 
-add_subdirectory(tests EXCLUDE_FROM_ALL)
-#add_subdirectory(tests)
+#add_subdirectory(tests EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
+
+
