--- a/cuda/cudarap/CMakeLists.txt
+++ b/cuda/cudarap/CMakeLists.txt
@@ -27,7 +27,7 @@ set(LIBRARIES
    ${PLog_LIBRARIES}
    ${SysRap_LIBRARIES}
 )
-message("${name}.SysRap_LIBRARIES : ${SysRap_LIBRARIES} ")
+#message("${name}.SysRap_LIBRARIES : ${SysRap_LIBRARIES} ")
 
 if(UNIX)
   set(LIBRARIES ${LIBRARIES} ssl )  
