API now applied to all other than cfg4-, adopt less fragile texture sampler creation approach in optixrap- OPropertyLib OSourceLib OBndLib OScintillatorLib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,8 @@ if(GPU)
        add_subdirectory(opticksgl)
    else(CUDA_FOUND AND OptiX_FOUND)
        set(WITH_OPTIX OFF)
-       message("Failed to find at least CUDA ${OPTICKS_CUDA_VERSION} and OptiX ${OPTICKS_OPTIX_VERSION} ")
-       message("proceeding with viz only configure.") 
+       message("${name}.Failed to find at least CUDA ${OPTICKS_CUDA_VERSION} and OptiX ${OPTICKS_OPTIX_VERSION} ")
+       message("${name}.proceeding with viz only configure.") 
    endif()
 endif(GPU)
 
