--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -77,6 +77,7 @@ include(EnvCompilationFlags)
 find_package(PLog REQUIRED)
 find_package(GLM  REQUIRED)
 find_package(OpticksBoost REQUIRED)
+find_package(SysRap REQUIRED)
 find_package(BoostRap REQUIRED)
 find_package(NPY   REQUIRED)
 find_package(OpticksCore REQUIRED)
@@ -85,6 +86,7 @@ set(BASE_INCLUDES
    ${PLog_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${OpticksBoost_INCLUDE_DIRS} 
+   ${SysRap_INCLUDE_DIRS}
    ${BoostRap_INCLUDE_DIRS}
    ${NPY_INCLUDE_DIRS} 
    ${OpticksCore_INCLUDE_DIRS} 
@@ -93,6 +95,7 @@ set(BASE_LIBRARIES
    ${PLog_LIBRARIES}
    ${GLM_LIBRARIES}
    ${OpticksBoost_LIBRARIES}
+   ${SysRap_LIBRARIES}
    ${BoostRap_LIBRARIES}
    ${NPY_LIBRARIES}
    ${OpticksCore_LIBRARIES}
@@ -101,6 +104,7 @@ set(BASE_DEFINITIONS
    ${PLog_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
    ${OpticksBoost_DEFINITIONS} 
+   ${SysRap_DEFINITIONS}
    ${BoostRap_DEFINITIONS}
    ${NPY_DEFINITIONS}
    ${OpticksCore_DEFINITIONS}
