cfg4- MSVC compiled and linked, next: runtime

--- a/optix/cfg4/tests/CMakeLists.txt
+++ b/optix/cfg4/tests/CMakeLists.txt
@@ -2,15 +2,26 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 set(name cfg4Test)
 project(${name})
 
-file(GLOB TEST_CC_SRCS "*Test.cc")
+#file(GLOB TEST_SOURCES "*Test.cc")
 
-foreach(TEST_CC_SRC ${TEST_CC_SRCS})
-    get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
-    add_executable(${TGT} ${TEST_CC_SRC})
-    target_link_libraries(${TGT} 
-               ${LIBRARIES} 
-               cfg4
-    )
-    install(TARGETS ${TGT} DESTINATION bin)
+set(_TEST_SOURCES
+
+)
+
+set(TEST_SOURCES
+
+    CPropLibTest.cc
+    CTestDetectorTest.cc
+    CGDMLDetectorTest.cc
+    CG4Test.cc
+
+)
+
+
+foreach(SRC ${TEST_SOURCES})
+    get_filename_component(TGT ${SRC} NAME_WE)
+    add_executable(${TGT} ${SRC})
+    target_link_libraries(${TGT} ${LIBRARIES} cfg4)
+    install(TARGETS ${TGT} DESTINATION lib)
 endforeach()
 
