--- a/optix/cfg4/tests/CMakeLists.txt
+++ b/optix/cfg4/tests/CMakeLists.txt
@@ -22,9 +22,14 @@ set(TEST_SOURCES
 
 
 foreach(SRC ${TEST_SOURCES})
+
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
     target_link_libraries(${TGT} ${LIBRARIES} cfg4)
     install(TARGETS ${TGT} DESTINATION lib)
+
+    add_test(${name}.${TGT} ${TGT})
+    add_dependencies(check ${TGT})
+
 endforeach()
 
