getting to build back on macOS

--- a/numerics/thrustrap/tests/CMakeLists.txt
+++ b/numerics/thrustrap/tests/CMakeLists.txt
@@ -24,10 +24,13 @@ endforeach()
 
 file(GLOB TEST_CU_SRCS "*Test.cu")
 
+
+set(XOPT --disable-warnings)
+
 foreach(TEST_CU_SRC ${TEST_CU_SRCS})
     get_filename_component(TGT ${TEST_CU_SRC} NAME_WE)
 
-    cuda_add_executable(${TGT} ${TEST_CU_SRC})
+    cuda_add_executable(${TGT} ${TEST_CU_SRC} OPTIONS ${XOPT})
 
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
