--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -71,7 +71,8 @@ SET(HEADERS
     iexpand.h 
 )
 
-CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS -gencode=arch=compute_30,code=sm_30)
+set(XOPT --disable-warnings)
+CUDA_ADD_LIBRARY( ${name} ${SOURCES} OPTIONS -gencode=arch=compute_30,code=sm_30 ${XOPT})
 target_link_libraries( ${name} ${LIBRARIES})
 
 install(TARGETS ${name} DESTINATION lib)
