investigate OpenMeshRap issue, asserting on deleting a mesh face, happens even with simple test/DeleteFaceTest so smth very wrong

--- a/graphics/assimprap/CMakeLists.txt
+++ b/graphics/assimprap/CMakeLists.txt
@@ -72,7 +72,7 @@ set(SOURCES
     AssimpNode.cc
 
     AssimpGGeo.cc
-    AssimpGeometry.cc
+    AssimpImporter.cc
 )
 
 set(HEADERS
@@ -85,7 +85,7 @@ set(HEADERS
 
     AssimpCommon.hh
     AssimpGGeo.hh
-    AssimpGeometry.hh
+    AssimpImporter.hh
     AssimpNode.hh
     AssimpRegistry.hh
     AssimpSelection.hh
