--- a/graphics/assimprap/tests/CMakeLists.txt
+++ b/graphics/assimprap/tests/CMakeLists.txt
@@ -12,14 +12,15 @@ set(_TEST_SOURCES
 set(TEST_SOURCES
 
      AssimpRapTest.cc   
-
+     AssimpImporterTest.cc   
+     AssimpGGeoTest.cc   
 )
 
 
 
-foreach(TEST_CC_SRC ${TEST_SOURCES})
-    get_filename_component(TGT ${TEST_CC_SRC} NAME_WE)
-    add_executable(${TGT} ${TEST_CC_SRC})
+foreach(SRC ${TEST_SOURCES})
+    get_filename_component(TGT ${SRC} NAME_WE)
+    add_executable(${TGT} ${SRC})
 
     add_test(${name}.${TGT} ${TGT})
     add_dependencies(check ${TGT})
