environment loading from file in npy- NEnv

--- a/numerics/npy/tests/CMakeLists.txt
+++ b/numerics/npy/tests/CMakeLists.txt
@@ -56,11 +56,13 @@ NTrianglesNPYTest.cc
 PhotonsNPYTest.cc
 
 NCIETest.cc
+NPYTest.cc
 )
 
 set(TEST_SOURCES
 
-NPYTest.cc
+MapTest.cc
+NEnvTest.cc
 
 )
 
