--- a/optix/ggeo/tests/CMakeLists.txt
+++ b/optix/ggeo/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ project(${name})
 
 #file(GLOB TEST_SOURCES "*Test.cc")
 
-set(TEST_SOURCES
+set(_TEST_SOURCES
 
     GConstantTest.cc
     GDomainTest.cc
@@ -69,6 +69,11 @@ set(TEST_SOURCES
 )
 
 
+set(TEST_SOURCES
+
+    GSurfaceLibTest.cc
+
+)
 
 
 
