mostly clean build in MSVC, but CG4Test failing: NEnv needs to fixup gitbash paths for the G4 env

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -15,6 +15,7 @@ if(UNIX)
    set(LIBRARIES ${LIBRARIES} ssl crypto)
 endif(UNIX)
 
+message("${name}:CMAKE_CXX_FLAGS : ${CMAKE_CXX_FLAGS} ")
 #message("${name}:LIBRARIES : ${LIBRARIES} ")
 #message("${name}:PLog_INCLUDE_DIRS : ${PLog_INCLUDE_DIRS} ")
 
