--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ add_subdirectory(boostrap)
 add_subdirectory(opticksnpy)   
 add_subdirectory(optickscore)         
 add_subdirectory(ggeo)     
-add_subdirectory(graphics/assimprap)   
-add_subdirectory(graphics/openmeshrap)  
+add_subdirectory(assimprap)   
+add_subdirectory(openmeshrap)  
 add_subdirectory(opticksgeo)  
 add_subdirectory(graphics/oglrap)       
 
