--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ if(GPU)
    find_package(OptiX ${OPTICKS_OPTIX_VERSION})
    if(CUDA_FOUND AND OptiX_FOUND)
        set(WITH_OPTIX ON)
-       add_subdirectory(cuda/cudarap)        
+       add_subdirectory(cudarap)        
        add_subdirectory(numerics/thrustrap)
        add_subdirectory(graphics/optixrap)
        add_subdirectory(opticksop)
