thrustrap to top

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ if(GPU)
    if(CUDA_FOUND AND OptiX_FOUND)
        set(WITH_OPTIX ON)
        add_subdirectory(cudarap)        
-       add_subdirectory(numerics/thrustrap)
+       add_subdirectory(thrustrap)
        add_subdirectory(graphics/optixrap)
        add_subdirectory(opticksop)
        add_subdirectory(opticksgl)
