optixrap to top

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ if(GPU)
        set(WITH_OPTIX ON)
        add_subdirectory(cudarap)        
        add_subdirectory(thrustrap)
-       add_subdirectory(graphics/optixrap)
+       add_subdirectory(optixrap)
        add_subdirectory(opticksop)
        add_subdirectory(opticksgl)
    else(CUDA_FOUND AND OptiX_FOUND)
